--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "Design Tool - Lunacy Clone",
   "type": "module",
   "scripts": {
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage"
   },
   "devDependencies": {
-    "vitest": "^2.1.0",
-    "@vitest/ui": "^2.1.0",
+    "@types/node": "^24.10.1",
     "@vitest/coverage-v8": "^2.1.0",
-    "jsdom": "^25.0.0"
-  },
-  "dependencies": {}
+    "@vitest/ui": "^2.1.0",
+    "jsdom": "^25.0.0",
+    "typescript": "^5.9.3",
+    "vitest": "^2.1.0"
+  }
 }
-
