--- a/package.json
+++ b/package.json
@@ -18,5 +18,150 @@
     "jsdom": "^25.0.0",
     "typescript": "^5.9.3",
     "vitest": "^2.1.0"
-  }
+  },
+  "main": "vitest.config.js",
+  "dependencies": {
+    "agent-base": "^7.1.4",
+    "ansi-regex": "^6.2.2",
+    "ansi-styles": "^6.2.3",
+    "assertion-error": "^2.0.1",
+    "asynckit": "^0.4.0",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^2.0.2",
+    "cac": "^6.7.14",
+    "call-bind-apply-helpers": "^1.0.2",
+    "chai": "^5.3.3",
+    "check-error": "^2.1.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "cross-spawn": "^7.0.6",
+    "cssstyle": "^4.6.0",
+    "data-urls": "^5.0.0",
+    "debug": "^4.4.3",
+    "decimal.js": "^10.6.0",
+    "deep-eql": "^5.0.2",
+    "delayed-stream": "^1.0.0",
+    "dunder-proto": "^1.0.1",
+    "eastasianwidth": "^0.2.0",
+    "emoji-regex": "^9.2.2",
+    "entities": "^6.0.1",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-module-lexer": "^1.7.0",
+    "es-object-atoms": "^1.1.1",
+    "es-set-tostringtag": "^2.1.0",
+    "esbuild": "^0.21.5",
+    "estree-walker": "^3.0.3",
+    "expect-type": "^1.2.2",
+    "fdir": "^6.5.0",
+    "fflate": "^0.8.2",
+    "flatted": "^3.3.3",
+    "foreground-child": "^3.3.1",
+    "form-data": "^4.0.4",
+    "fsevents": "^2.3.3",
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "glob": "^10.4.5",
+    "gopd": "^1.2.0",
+    "has-flag": "^4.0.0",
+    "has-symbols": "^1.1.0",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "html-encoding-sniffer": "^4.0.0",
+    "html-escaper": "^2.0.2",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
+    "iconv-lite": "^0.6.3",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-potential-custom-element-name": "^1.0.1",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-lib-source-maps": "^5.0.6",
+    "istanbul-reports": "^3.2.0",
+    "jackspeak": "^3.4.3",
+    "loupe": "^3.2.1",
+    "lru-cache": "^10.4.3",
+    "magic-string": "^0.30.21",
+    "magicast": "^0.3.5",
+    "make-dir": "^4.0.0",
+    "math-intrinsics": "^1.1.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^9.0.5",
+    "minipass": "^7.1.2",
+    "mrmime": "^2.0.1",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.11",
+    "nwsapi": "^2.2.22",
+    "package-json-from-dist": "^1.0.1",
+    "parse5": "^7.3.0",
+    "path-key": "^3.1.1",
+    "path-scurry": "^1.11.1",
+    "pathe": "^1.1.2",
+    "pathval": "^2.0.1",
+    "picocolors": "^1.1.1",
+    "picomatch": "^4.0.3",
+    "postcss": "^8.5.6",
+    "punycode": "^2.3.1",
+    "rollup": "^4.53.2",
+    "rrweb-cssom": "^0.7.1",
+    "safer-buffer": "^2.1.2",
+    "saxes": "^6.0.0",
+    "semver": "^7.7.3",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "siginfo": "^2.0.0",
+    "signal-exit": "^4.1.0",
+    "sirv": "^3.0.2",
+    "source-map-js": "^1.2.1",
+    "stackback": "^0.0.2",
+    "std-env": "^3.10.0",
+    "string-width": "^5.1.2",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^7.1.2",
+    "strip-ansi-cjs": "^6.0.1",
+    "supports-color": "^7.2.0",
+    "symbol-tree": "^3.2.4",
+    "test-exclude": "^7.0.1",
+    "tinybench": "^2.9.0",
+    "tinyexec": "^0.3.2",
+    "tinyglobby": "^0.2.15",
+    "tinypool": "^1.1.1",
+    "tinyrainbow": "^1.2.0",
+    "tinyspy": "^3.0.2",
+    "tldts": "^6.1.86",
+    "tldts-core": "^6.1.86",
+    "totalist": "^3.0.1",
+    "tough-cookie": "^5.1.2",
+    "tr46": "^5.1.1",
+    "undici-types": "^7.16.0",
+    "vite": "^5.4.21",
+    "vite-node": "^2.1.9",
+    "w3c-xmlserializer": "^5.0.0",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-encoding": "^3.1.1",
+    "whatwg-mimetype": "^4.0.0",
+    "whatwg-url": "^14.2.0",
+    "which": "^2.0.2",
+    "why-is-node-running": "^2.3.0",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "ws": "^8.18.3",
+    "xml-name-validator": "^5.0.0",
+    "xmlchars": "^2.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Extrepa/LunancyClone.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Extrepa/LunancyClone/issues"
+  },
+  "homepage": "https://github.com/Extrepa/LunancyClone#readme"
 }
